book draft in progress

--- a/_sources/000_1-sds-3-x/000_ScaDaMaLe.ipynb
+++ b/_sources/000_1-sds-3-x/000_ScaDaMaLe.ipynb
@@ -254,8 +254,37 @@
     "    -   education\n",
     "    -   financial modeling\n",
     "    -   policing\n",
-    "    -   marketing\n",
-    "\n",
+    "    -   marketing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//This allows easy embedding of publicly available information into any other notebook\n",
+    "//Example usage:\n",
+    "// displayHTML(frameIt(\"https://en.wikipedia.org/wiki/Latent_Dirichlet_allocation#Topics_in_LDA\",250))\n",
+    "def frameIt( u:String, h:Int ) : String = {\n",
+    "      \"\"\"<iframe \n",
+    " src=\"\"\"\"+ u+\"\"\"\"\n",
+    " width=\"95%\" height=\"\"\"\" + h + \"\"\"\"\n",
+    " sandbox>\n",
+    "  <p>\n",
+    "    <a href=\"http://spark.apache.org/docs/latest/index.html\">\n",
+    "      Fallback link for browsers that, unlikely, don't support frames\n",
+    "    </a>\n",
+    "  </p>\n",
+    "</iframe>\"\"\"\n",
+    "   }\n",
+    "displayHTML(frameIt(\"https://en.wikipedia.org/wiki/Data_science\",500))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "  \n",
     "\n",
     "But what is Data Engineering (including Machine Learning Engineering and\n",
@@ -311,8 +340,22 @@
     "\n",
     "-   https://www.oreilly.com/ideas/data-engineers-vs-data-scientists\n",
     "\n",
-    "embedded below.\n",
-    "\n",
+    "embedded below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "displayHTML(frameIt(\"https://www.oreilly.com/ideas/data-engineers-vs-data-scientists\",500))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "  \n",
     "\n",
     "The Data Engineering Scientist as \"The Middle Way\"\n",
@@ -451,8 +494,22 @@
     "\n",
     "Here is a recommended light reading on **What is \"Big Data\" --\n",
     "Understanding th History** (18 minutes): -\n",
-    "<https://towardsdatascience.com/what-is-big-data-understanding-the-history-32078f3b53ce>\n",
-    "\n",
+    "<https://towardsdatascience.com/what-is-big-data-understanding-the-history-32078f3b53ce>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "displayHTML(frameIt(\"https://towardsdatascience.com/what-is-big-data-understanding-the-history-32078f3b53ce\",800))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "  \n",
     "\n",
     "------------------------------------------------------------------------\n",
