--- a/_sources/000_1-sds-3-x/003_00_scalaCrashCourse.ipynb
+++ b/_sources/000_1-sds-3-x/003_00_scalaCrashCourse.ipynb
@@ -62,11 +62,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     res0: Int = 2"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -81,10 +77,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     1600334747591\n",
-    "\n",
     "  \n",
     "\n",
     "Scala Resources\n",
@@ -170,8 +162,52 @@
     "-   See Darren Wilkinson's 11 reasons for [scala as a platform for\n",
     "    statistical computing and data\n",
     "    science](https://darrenjw.wordpress.com/2013/12/23/scala-as-a-platform-for-statistical-computing-and-data-science/).\n",
-    "    It is embedded in-place below for your convenience.\n",
-    "\n",
+    "    It is embedded in-place below for your convenience."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//%run \"/scalable-data-science/xtraResources/support/sdsFunctions\"\n",
+    "//This allows easy embedding of publicly available information into any other notebook\n",
+    "//when viewing in git-book just ignore this block - you may have to manually chase the URL in frameIt(\"URL\").\n",
+    "//Example usage:\n",
+    "// displayHTML(frameIt(\"https://en.wikipedia.org/wiki/Latent_Dirichlet_allocation#Topics_in_LDA\",250))\n",
+    "def frameIt( u:String, h:Int ) : String = {\n",
+    "      \"\"\"<iframe \n",
+    " src=\"\"\"\"+ u+\"\"\"\"\n",
+    " width=\"95%\" height=\"\"\"\" + h + \"\"\"\"\n",
+    " sandbox>\n",
+    "  <p>\n",
+    "    <a href=\"http://spark.apache.org/docs/latest/index.html\">\n",
+    "      Fallback link for browsers that, unlikely, don't support frames\n",
+    "    </a>\n",
+    "  </p>\n",
+    "</iframe>\"\"\"\n",
+    "   }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "displayHTML(frameIt(\"https://darrenjw.wordpress.com/2013/12/23/scala-as-a-platform-for-statistical-computing-and-data-science/\",500))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "  \n",
     "\n",
     "Let's get our hands dirty in Scala\n",
@@ -232,10 +268,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     res2: Int = 2\n",
-    "\n",
-    "  \n",
-    "\n",
     "We can print the output of a computed or evaluated expressions as a line\n",
     "using `println`:"
    ]
@@ -252,11 +284,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     2"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -271,10 +299,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     hej hej!\n",
-    "\n",
     "  \n",
     "\n",
     "Naming and Assignments\n",
@@ -302,10 +326,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     x: Int = 5\n",
-    "\n",
-    "  \n",
-    "\n",
     "`x` is a named result and it is a value since we used the keyword `val`\n",
     "when naming it.\n",
     "\n",
@@ -330,10 +350,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     x: Int = 5\n",
-    "\n",
-    "  \n",
-    "\n",
     "Let's declare `x` as a `Double` or double-precision floating-point type\n",
     "using decimal such as `5.0` (a digit has to follow the decimal point!)"
    ]
@@ -351,10 +367,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     x: Double = 5.0\n",
-    "\n",
     "  \n",
     "\n",
     "Alternatively, we can assign `x` as a `Double` explicitly. Note that the\n",
@@ -375,10 +387,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     x: Double = 5.0\n",
-    "\n",
     "  \n",
     "\n",
     "Next note that labels need to be declared on first use. We have declared\n",
@@ -404,8 +412,6 @@
    "source": [
     "  \n",
     "\n",
-    "  \n",
-    "\n",
     "Scala allows declaration of mutable variables as well using `var`, as\n",
     "follows:"
    ]
@@ -422,11 +428,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     y: Int = 2"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -440,11 +442,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     y: Int = 3"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -458,11 +456,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     y: Int = 4"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -493,10 +487,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     6\n",
-    "\n",
-    "  \n",
-    "\n",
     "Blocks\n",
     "======\n",
     "\n",
@@ -519,11 +509,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     4"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -538,10 +524,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     24\n",
-    "\n",
     "  \n",
     "\n",
     "Functions\n",
@@ -570,10 +552,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     res10: Int => Int = $Lambda$4366/1197158585@148d76f6\n",
-    "\n",
-    "  \n",
-    "\n",
     "On the left of `=>` is a list of parameters with name and type. On the\n",
     "right is an expression involving the parameters.\n",
     "\n",
@@ -592,11 +570,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     multiplyByItself: Int => Int = $Lambda$4367/762456067@1d21bd96"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -611,10 +585,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     100\n",
-    "\n",
     "  \n",
     "\n",
     "A function can have no parameters:"
@@ -632,11 +602,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     howManyAmI: () => Int = $Lambda$4370/1003389859@7fe2298c"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -651,10 +617,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     1\n",
-    "\n",
     "  \n",
     "\n",
     "A function can have more than one parameter:"
@@ -672,11 +634,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     multiplyTheseTwoIntegers: (Int, Int) => Int = $Lambda$4371/1773386122@18550def"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -691,10 +649,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     8\n",
-    "\n",
     "  \n",
     "\n",
     "Methods\n",
@@ -721,10 +675,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     square: (x: Int)Int\n",
-    "\n",
-    "  \n",
-    "\n",
     "Note that the return type `Int` is specified after the parameter list\n",
     "and a `:`."
    ]
@@ -741,11 +691,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     res14: Int = 25"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -759,11 +705,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     y: Int = 3"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -777,11 +719,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     res15: Int = 9"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -795,11 +733,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     x: Double = 5.0"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -830,11 +764,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     square: (x: Int)Int"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -848,11 +778,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     res18: Int = 25000000"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -872,10 +798,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     announceAndEmit: (text: String)String\n",
-    "\n",
     "  \n",
     "\n",
     "Scala has a `return` keyword but it is rarely used as the expression in\n",
@@ -898,11 +820,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     roger  roger\n",
-    ">     res19: String = roger  roger\n",
-    "\n",
-    "  \n",
-    "\n",
     "A method can have output expressions involving multiple parameter lists:"
    ]
   },
@@ -918,11 +835,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     multiplyAndTranslate: (x: Int, y: Int)(translateBy: Int)Int"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -937,10 +850,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     10\n",
-    "\n",
     "  \n",
     "\n",
     "A method can have no parameter lists at all:"
@@ -958,11 +867,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "  \n",
-    "\n",
-    ">     time: Long"
+    "println(\"Current time in milliseconds is \" + time)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -977,28 +896,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     Current time in milliseconds is 1600335719572"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "println(\"Current time in milliseconds is \" + time)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     Current time in milliseconds is 1600335736930\n",
-    "\n",
     "  \n",
     "\n",
     "Classes\n",
@@ -1023,10 +920,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     defined class Box\n",
-    "\n",
     "  \n",
     "\n",
     "-   The return type of the method `printVolume` is `Unit`.\n",
@@ -1055,10 +948,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     my1Cube: Box = Box@4b392ccf\n",
-    "\n",
-    "  \n",
-    "\n",
     "And call the method on the instance."
    ]
   },
@@ -1075,10 +964,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     1\n",
-    "\n",
     "  \n",
     "\n",
     "Our named instance `my1Cube` of the `Box` class is immutable due to\n",
@@ -1099,11 +984,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     myVaryingCuboid: Box = Box@406690b8"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1117,11 +998,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     6"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1135,11 +1012,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     myVaryingCuboid: Box = Box@35255f0f"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1154,10 +1027,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     1\n",
-    "\n",
     "  \n",
     "\n",
     "See <https://docs.scala-lang.org/tour/classes.html> for more details as\n",
@@ -1189,10 +1058,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     defined class Point\n",
-    "\n",
-    "  \n",
-    "\n",
     "Case classes can be instantiated without the `new` keyword."
    ]
   },
@@ -1211,12 +1076,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     point: Point = Point(1,2,3)\n",
-    ">     anotherPoint: Point = Point(1,2,3)\n",
-    ">     yetAnotherPoint: Point = Point(2,2,2)\n",
-    "\n",
     "  \n",
     "\n",
     "Instances of case classes are compared by value and not by reference."
@@ -1247,11 +1106,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     Point(1,2,3) and Point(1,2,3) are the same.\n",
-    ">     Point(1,2,3) and Point(2,2,2) are different.\n",
-    "\n",
-    "  \n",
-    "\n",
     "By contrast, instances of classes are compared by reference."
    ]
   },
@@ -1267,11 +1121,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     1"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1285,11 +1135,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     1"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1308,10 +1154,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     myVaryingCuboid and my1Cube are different.\n",
-    "\n",
     "  \n",
     "\n",
     "More about case classes here:\n",
@@ -1336,10 +1178,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     s: String = hi\n",
-    "\n",
     "  \n",
     "\n",
     "You can place the cursor after `.` following a declared object and find\n",
@@ -1403,11 +1241,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     res30: Boolean = false"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1421,11 +1255,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     res31: Boolean = true"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1440,10 +1270,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     res32: Boolean = true\n",
-    "\n",
     "  \n",
     "\n",
     "Objects\n",
@@ -1474,10 +1300,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     defined object IdGenerator\n",
-    "\n",
-    "  \n",
-    "\n",
     "You can access an object through its name:"
    ]
   },
@@ -1494,12 +1316,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     newId: Int = 1\n",
-    ">     newerId: Int = 2"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1515,11 +1332,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     1\n",
-    ">     2\n",
-    "\n",
     "  \n",
     "\n",
     "For details see\n",
@@ -1552,10 +1364,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     defined trait Greeter\n",
-    "\n",
-    "  \n",
-    "\n",
     "Traits can have default implementations also."
    ]
   },
@@ -1575,10 +1383,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     defined trait Greeter\n",
-    "\n",
     "  \n",
     "\n",
     "You can extend traits with the `extends` keyword and override an\n",
@@ -1612,12 +1416,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     defined class DefaultGreeter\n",
-    ">     defined class SwedishGreeter\n",
-    ">     defined class CustomizableGreeter\n",
-    "\n",
-    "  \n",
-    "\n",
     "Instantiate the classes."
    ]
   },
@@ -1638,12 +1436,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     greeter: DefaultGreeter = DefaultGreeter@10680a43\n",
-    ">     swedishGreeter: SwedishGreeter = SwedishGreeter@7b015539\n",
-    ">     customGreeter: CustomizableGreeter = CustomizableGreeter@2d3a0a99\n",
-    "\n",
-    "  \n",
-    "\n",
     "Call the `greet` method in each case."
    ]
   },
@@ -1662,12 +1454,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     Hello, Scala developer!\n",
-    ">     Hej hej, Scala developer!\n",
-    ">     How are you, Scala developer?\n",
-    "\n",
     "  \n",
     "\n",
     "A class can also be made to extend multiple traits.\n",
@@ -1701,10 +1487,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     defined object Main\n",
-    "\n",
     "  \n",
     "\n",
     "What I try not do while learning a new language?\n",
