--- a/_sources/000_1-sds-3-x/003_01_scalaCrashCourse.ipynb
+++ b/_sources/000_1-sds-3-x/003_01_scalaCrashCourse.ipynb
@@ -48,7 +48,39 @@
     "-   [Scala crash course by Holden\n",
     "    Karau](http://lintool.github.io/SparkTutorial/slides/day1_Scala_crash_course.pdf)\n",
     "-   [Darren's brief introduction to scala and breeze for statistical\n",
-    "    computing](https://darrenjw.wordpress.com/2013/12/30/brief-introduction-to-scala-and-breeze-for-statistical-computing/)\n",
+    "    computing](https://darrenjw.wordpress.com/2013/12/30/brief-introduction-to-scala-and-breeze-for-statistical-computing/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//%run \"/scalable-data-science/xtraResources/support/sdsFunctions\"\n",
+    "//This allows easy embedding of publicly available information into any other notebook\n",
+    "//when viewing in git-book just ignore this block - you may have to manually chase the URL in frameIt(\"URL\").\n",
+    "//Example usage:\n",
+    "// displayHTML(frameIt(\"https://en.wikipedia.org/wiki/Latent_Dirichlet_allocation#Topics_in_LDA\",250))\n",
+    "def frameIt( u:String, h:Int ) : String = {\n",
+    "      \"\"\"<iframe \n",
+    " src=\"\"\"\"+ u+\"\"\"\"\n",
+    " width=\"95%\" height=\"\"\"\" + h + \"\"\"\"\n",
+    " sandbox>\n",
+    "  <p>\n",
+    "    <a href=\"http://spark.apache.org/docs/latest/index.html\">\n",
+    "      Fallback link for browsers that, unlikely, don't support frames\n",
+    "    </a>\n",
+    "  </p>\n",
+    "</iframe>\"\"\"\n",
+    "   }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "  \n",
     "\n",
     "Let's continue to get our hands dirty in Scala\n",
     "==============================================\n",
@@ -85,8 +117,22 @@
     "`String`, `Double`, `Unit`, `Boolean`, `List`, etc. For more details see\n",
     "<https://docs.scala-lang.org/tour/unified-types.html>.\n",
     "\n",
-    "Let us take a closer look at Scala Type Hierarchy now.\n",
-    "\n",
+    "Let us take a closer look at Scala Type Hierarchy now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "displayHTML(frameIt(\"https://docs.scala-lang.org/tour/unified-types.html\",550))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "  \n",
     "\n",
     "Scala Collections\n",
@@ -110,8 +156,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
     "  \n",
     "\n",
     "List\n",
@@ -141,10 +185,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     lst: List[Int] = List(1, 2, 3)\n",
-    "\n",
     "  \n",
     "\n",
     "Vectors\n",
@@ -177,10 +217,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     vec: scala.collection.immutable.Vector[Int] = Vector(1, 2, 3)\n",
-    "\n",
-    "  \n",
-    "\n",
     "Arrays, Sequences and Tuples\n",
     "----------------------------\n",
     "\n",
@@ -200,11 +236,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     arr: Array[Int] = Array(1, 2, 3)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -219,10 +251,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     seq: Seq[Int] = List(1, 2, 3)\n",
-    "\n",
     "  \n",
     "\n",
     "> A tuple is a neat class that gives you a simple way to store\n",
@@ -244,11 +272,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     myTuple: (Char, Int) = (a,1)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -262,11 +286,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     res0: Char = a"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -281,10 +301,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     res1: Int = 1\n",
-    "\n",
     "  \n",
     "\n",
     "Functional Programming and MapReduce\n",
@@ -357,6 +373,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "displayHTML(frameIt(\"https://superruzafa.github.io/visual-scala-reference/map/\",500))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "// <Shift+Enter> to map each value x of lst with x+10 to return a new List(11, 12, 13)\n",
     "lst.map(x => x + 10)  "
    ]
@@ -364,11 +394,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     res2: List[Int] = List(11, 12, 13)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -383,11 +409,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "  \n",
-    "\n",
-    ">     res3: List[Int] = List(11, 12, 13)"
+    "displayHTML(frameIt(\"https://superruzafa.github.io/visual-scala-reference/filter/\",600))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -402,11 +438,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     res4: List[Int] = List(1, 3)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -421,11 +453,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "  \n",
-    "\n",
-    ">     res5: List[Int] = List(1, 3)"
+    "displayHTML(frameIt(\"https://superruzafa.github.io/visual-scala-reference/reduce/\",600))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -440,11 +482,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     res6: Int = 6"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -460,10 +498,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     res7: Int = 6\n",
-    "\n",
     "  \n",
     "\n",
     "Let's combine `map` and `reduce` programs above to find the sum of after\n",
@@ -487,18 +521,28 @@
    "source": [
     "  \n",
     "\n",
-    ">     res8: Int = 36\n",
-    "\n",
-    "  \n",
-    "\n",
     "Exercise in Functional Programming\n",
     "==================================\n",
     "\n",
     "You should spend an hour or so going through the Functional Programming\n",
     "Section of the Scala Book:\n",
     "\n",
-    "-   <https://docs.scala-lang.org/overviews/scala-book/functional-programming.html>\n",
-    "\n",
+    "-   <https://docs.scala-lang.org/overviews/scala-book/functional-programming.html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "displayHTML(frameIt(\"https://docs.scala-lang.org/overviews/scala-book/functional-programming.html\",700))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "  \n",
     "\n",
     "There are lots of methods in Scala Collections. And much more in this\n",
@@ -528,11 +572,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     eagerImmutableInt: Int = 1"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -547,10 +587,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     eagerMutableInt: Int = 2\n",
-    "\n",
     "  \n",
     "\n",
     "Let's demonstrate lazy evaluation using a `getTime` method and the\n",
@@ -569,11 +605,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     import java.util.Calendar"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -587,11 +619,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     lazyImmutableTime: java.util.Date = <lazy>"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -605,11 +633,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     eagerImmutableTime: java.util.Date = Thu Sep 17 12:41:55 UTC 2020"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -623,11 +647,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     Thu Sep 17 12:42:09 UTC 2020"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -641,11 +661,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     Thu Sep 17 12:41:55 UTC 2020"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -659,11 +675,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     lazyDefinedInt: Int"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -678,10 +690,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     res11: Int = 5\n",
-    "\n",
     "  \n",
     "\n",
     "See\n",
@@ -701,11 +709,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     builder: StringBuilder ="
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -719,11 +723,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     x: Int = 1"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -737,11 +737,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     res12: String = x"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -755,11 +751,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     res13: Int = 1"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -773,11 +765,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     res14: String = x"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -791,11 +779,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     y: Int = <lazy>"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -809,11 +793,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     res15: String = x"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -827,11 +807,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     z: Int"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -846,10 +822,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     res16: String = x\n",
-    "\n",
     "  \n",
     "\n",
     "What should `builder.result()` be after the following arithmetic\n",
@@ -869,10 +841,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     res17: Int = 12\n",
-    "\n",
     "  \n",
     "\n",
     "### Lazy Evaluation Exercise - You try Now!\n",
@@ -898,10 +866,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     res18: String = xzyz\n",
-    "\n",
     "  \n",
     "\n",
     "Why Lazy?\n",
@@ -951,11 +915,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     factorialNaive: (n: Int)Int"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -970,10 +930,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     res19: Int = 24\n",
-    "\n",
     "  \n",
     "\n",
     "When `factorialNaive(4)` was evaluated above the following steps were\n",
@@ -1047,12 +1003,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     import scala.annotation.tailrec\n",
-    ">     factorialTail: (n: Int)Int"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1066,11 +1017,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     res9: Int = 6"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1085,10 +1032,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     res10: Int = 24\n",
-    "\n",
     "  \n",
     "\n",
     "Functional Programming is a vast subject and we are merely covering the\n",
