--- a/_sources/000_1-sds-3-x/004_RDDsTransformationsActions.ipynb
+++ b/_sources/000_1-sds-3-x/004_RDDsTransformationsActions.ipynb
@@ -144,8 +144,37 @@
     "    one should try to cover first\n",
     "    -   <http://spark.apache.org/docs/latest/programming-guide.html>.\n",
     "    -   and specifically for RDDs:\n",
-    "        <https://spark.apache.org/docs/latest/rdd-programming-guide.html>\n",
-    "\n",
+    "        <https://spark.apache.org/docs/latest/rdd-programming-guide.html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//This allows easy embedding of publicly available information into any other notebook\n",
+    "//Example usage:\n",
+    "// displayHTML(frameIt(\"https://en.wikipedia.org/wiki/Latent_Dirichlet_allocation#Topics_in_LDA\",250))\n",
+    "def frameIt( u:String, h:Int ) : String = {\n",
+    "      \"\"\"<iframe \n",
+    " src=\"\"\"\"+ u+\"\"\"\"\n",
+    " width=\"95%\" height=\"\"\"\" + h + \"\"\"\"\n",
+    " sandbox>\n",
+    "  <p>\n",
+    "    <a href=\"http://spark.apache.org/docs/latest/index.html\">\n",
+    "      Fallback link for browsers that, unlikely, don't support frames\n",
+    "    </a>\n",
+    "  </p>\n",
+    "</iframe>\"\"\"\n",
+    "   }\n",
+    "displayHTML(frameIt(\"https://spark.apache.org/docs/latest/rdd-programming-guide.html\",700))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "  \n",
     "\n",
     "Let us get our hands dirty in Spark implementing these ideas!\n",
@@ -228,10 +257,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     org.apache.spark.sql.SparkSession@4e90f6e2\n",
-    "\n",
-    "  \n",
-    "\n",
     "NOTE that since Spark 2.0 `SparkSession` is a replacement for the other\n",
     "entry points: \\* `SparkContext`, available in our notebook as **sc**. \\*\n",
     "`SQLContext`, or more specifically its subclass `HiveContext`, available\n",
@@ -252,11 +277,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     org.apache.spark.SparkContext@14f4984\n",
-    ">     org.apache.spark.sql.hive.HiveContext@57498b38\n",
-    "\n",
     "  \n",
     "\n",
     "We will be using the pre-made SparkContext `sc` when learning about\n",
@@ -281,11 +301,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     x: org.apache.spark.rdd.RDD[Int] = ParallelCollectionRDD[0] at parallelize at command-3398110674017707:1"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -335,10 +351,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     res2: Array[Int] = Array(1, 2, 3)\n",
-    "\n",
-    "  \n",
-    "\n",
     "*CAUTION:* `collect` can crash the driver when called upon an RDD with\n",
     "massively many elements.  \n",
     "So, it is better to use other diplaying actions like `take` or\n",
@@ -365,10 +377,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     res3: Int = 2\n",
-    "\n",
-    "  \n",
-    "\n",
     "We can see which elements of the RDD are in which parition by calling\n",
     "`glom()` before `collect()`.\n",
     "\n",
@@ -387,11 +395,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     res4: Array[Array[Int]] = Array(Array(1), Array(2, 3))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -406,10 +410,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     a: Array[Array[Int]] = Array(Array(1), Array(2, 3))\n",
-    "\n",
     "  \n",
     "\n",
     "Thus from the output above,\n",
@@ -439,11 +439,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     x: org.apache.spark.rdd.RDD[Int] = ParallelCollectionRDD[3] at parallelize at command-3398110674017721:1"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -457,11 +453,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     res5: Int = 4"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -476,10 +468,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     res6: Array[Array[Int]] = Array(Array(), Array(1), Array(2), Array(3))\n",
-    "\n",
     "  \n",
     "\n",
     "### 3. Perform the `take` action on the RDD\n",
@@ -503,10 +491,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     res7: Array[Int] = Array(1, 2)\n",
-    "\n",
-    "  \n",
-    "\n",
     "##### You Try!\n",
     "\n",
     "Fill in the parenthes `( )` below in order to `take` just one element\n",
@@ -526,8 +510,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
     "  \n",
     "\n",
     "------------------------------------------------------------------------\n",
@@ -558,12 +540,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     x: org.apache.spark.rdd.RDD[String] = ParallelCollectionRDD[5] at parallelize at command-3398110674017730:2\n",
-    ">     y: org.apache.spark.rdd.RDD[(String, Int)] = MapPartitionsRDD[6] at map at command-3398110674017730:3"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -580,11 +557,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     b, a, c\n",
-    ">     (b,1), (a,1), (c,1)\n",
-    "\n",
     "  \n",
     "\n",
     "------------------------------------------------------------------------\n",
@@ -615,12 +587,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     x: org.apache.spark.rdd.RDD[Int] = ParallelCollectionRDD[7] at parallelize at command-3398110674017734:2\n",
-    ">     y: org.apache.spark.rdd.RDD[Int] = MapPartitionsRDD[8] at filter at command-3398110674017734:5"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -638,11 +605,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     1, 2, 3\n",
-    ">     1, 3\n",
-    "\n",
     "  \n",
     "\n",
     "------------------------------------------------------------------------\n",
@@ -674,12 +636,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     x: org.apache.spark.rdd.RDD[Int] = ParallelCollectionRDD[9] at parallelize at command-3398110674017738:2\n",
-    ">     y: Int = 10"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -696,11 +653,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     1, 2, 3, 4\n",
-    ">     10\n",
-    "\n",
     "  \n",
     "\n",
     "### 7. Transform an RDD by `flatMap` to make another RDD\n",
@@ -729,12 +681,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     x: org.apache.spark.rdd.RDD[Int] = ParallelCollectionRDD[10] at parallelize at command-3398110674017742:2\n",
-    ">     y: org.apache.spark.rdd.RDD[Int] = MapPartitionsRDD[11] at flatMap at command-3398110674017742:3"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -752,12 +699,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     1, 2, 3\n",
-    ">     1, 100, 42, 2, 200, 42, 3, 300, 42\n",
-    ">     res11: Array[Array[Int]] = Array(Array(1, 100, 42), Array(2, 200, 42), Array(3, 300, 42))\n",
-    "\n",
     "  \n",
     "\n",
     "### 8. Create a Pair RDD\n",
@@ -783,11 +724,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     words: org.apache.spark.rdd.RDD[String] = ParallelCollectionRDD[14] at parallelize at command-3398110674017745:2\n",
-    ">     res12: Array[String] = Array(a, b, a, a, b, b, a, a, a, b, b)\n",
-    "\n",
-    "  \n",
-    "\n",
     "Let's make a Pair RDD called `wordCountPairRDD` that is made of\n",
     "(key,value) pairs with key=word and value=1 in order to encode each\n",
     "occurrence of each word in the RDD `words`, as follows:"
@@ -808,11 +744,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     wordCountPairRDD: org.apache.spark.rdd.RDD[(String, Int)] = MapPartitionsRDD[15] at map at command-3398110674017747:2\n",
-    ">     res13: Array[(String, Int)] = Array((a,1), (b,1), (a,1), (a,1), (b,1), (b,1), (a,1), (a,1), (a,1), (b,1), (b,1))\n",
-    "\n",
     "  \n",
     "\n",
     "### Wide Transformations and Shuffles\n",
@@ -850,8 +781,22 @@
     "> Internally, results from individual map tasks are kept in memory until\n",
     "> they can’t fit. Then, these are sorted based on the target partition\n",
     "> and written to a single file. On the reduce side, tasks read the\n",
-    "> relevant sorted blocks.\n",
-    "\n",
+    "> relevant sorted blocks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "displayHTML(frameIt(\"https://spark.apache.org/docs/latest/rdd-programming-guide.html#shuffle-operations\",500))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "  \n",
     "\n",
     "### 9. Perform some transformations on a Pair RDD\n",
@@ -899,11 +844,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     wordcounts: org.apache.spark.rdd.RDD[(String, Int)] = ShuffledRDD[17] at reduceByKey at command-3398110674017750:3\n",
-    ">     res15: Array[(String, Int)] = Array((a,6), (b,5))\n",
-    "\n",
-    "  \n",
-    "\n",
     "Now, let us do just the crucial steps and avoid collecting intermediate\n",
     "RDDs (something we should avoid for large datasets anyways, as they may\n",
     "not fit in the driver program)."
@@ -929,11 +869,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     words: org.apache.spark.rdd.RDD[String] = ParallelCollectionRDD[21] at parallelize at command-3398110674017752:2\n",
-    ">     wordcounts: Array[(String, Int)] = Array((a,6), (b,5))\n",
-    "\n",
-    "  \n",
-    "\n",
     "##### You Try!\n",
     "\n",
     "You try evaluating `sortByKey()` which will make a new RDD that consists\n",
@@ -955,13 +890,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     words: org.apache.spark.rdd.RDD[String] = ParallelCollectionRDD[17] at parallelize at command-3398110674017754:2\n",
-    ">     wordCountPairRDD: org.apache.spark.rdd.RDD[(String, Int)] = MapPartitionsRDD[18] at map at command-3398110674017754:3\n",
-    ">     wordCountPairRDDSortedByKey: org.apache.spark.rdd.RDD[(String, Int)] = ShuffledRDD[21] at sortByKey at command-3398110674017754:4"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -975,11 +904,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     res8: Array[(String, Int)] = Array((a,1), (b,1), (a,1), (a,1), (b,1), (b,1), (a,1), (a,1), (a,1), (b,1), (b,1))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -994,10 +919,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     res9: Array[(String, Int)] = Array((a,1), (a,1), (a,1), (a,1), (a,1), (a,1), (b,1), (b,1), (b,1), (b,1), (b,1))\n",
-    "\n",
     "  \n",
     "\n",
     "The next key value transformation we will see is `groupByKey`\n",
@@ -1032,11 +953,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     wordCountPairRDDGroupByKey: org.apache.spark.rdd.RDD[(String, Iterable[Int])] = ShuffledRDD[22] at groupByKey at command-3398110674017759:1"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1053,10 +970,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     res10: Array[(String, Iterable[Int])] = Array((a,CompactBuffer(1, 1, 1, 1, 1, 1)), (b,CompactBuffer(1, 1, 1, 1, 1)))\n",
-    "\n",
-    "  \n",
-    "\n",
     "### 10. Understanding Closures - Where in the cluster is your computation running?\n",
     "\n",
     "> One of the harder things about Spark is understanding the scope and\n",
@@ -1066,6 +979,20 @@
     "> at code that uses foreach() to increment a counter, but similar issues\n",
     "> can occur for other operations as well."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "displayHTML(frameIt(\"https://spark.apache.org/docs/latest/rdd-programming-guide.html#understanding-closures-\",500))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1087,13 +1014,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     Counter value: 0\n",
-    ">     data: Array[Int] = Array(1, 2, 3, 4, 5)\n",
-    ">     counter: Int = 0\n",
-    ">     rdd: org.apache.spark.rdd.RDD[Int] = ParallelCollectionRDD[24] at parallelize at command-4158380413057402:3\n",
-    "\n",
     "  \n",
     "\n",
     "From RDD programming guide:\n",
@@ -1176,8 +1096,22 @@
     "> associative and commutative operation and can therefore be efficiently\n",
     "> supported in parallel. They can be used to implement counters (as in\n",
     "> MapReduce) or sums. Spark natively supports accumulators of numeric\n",
-    "> types, and programmers can add support for new types.\n",
-    "\n",
+    "> types, and programmers can add support for new types."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "displayHTML(frameIt(\"https://spark.apache.org/docs/latest/rdd-programming-guide.html#accumulators\",500))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "  \n",
     "\n",
     "> A numeric accumulator can be created by calling\n",
@@ -1203,11 +1137,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     accum: org.apache.spark.util.LongAccumulator = LongAccumulator(id: 780, name: Some(My Accumulator), value: 0)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1236,10 +1166,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     res18: Long = 10\n",
-    "\n",
     "  \n",
     "\n",
     "Broadcast Variables\n",
@@ -1272,17 +1198,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "displayHTML(frameIt(\"https://spark.apache.org/docs/latest/rdd-programming-guide.html#broadcast-variables\",500))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "val broadcastVar = sc.broadcast(Array(1, 2, 3))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     broadcastVar: org.apache.spark.broadcast.Broadcast[Array[Int]] = Broadcast(27)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1296,11 +1232,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     res19: Array[Int] = Array(1, 2, 3)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1314,11 +1246,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     res20: Int = 1"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1332,11 +1260,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     rdd: org.apache.spark.rdd.RDD[Int] = ParallelCollectionRDD[26] at parallelize at command-4158380413057414:1"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1350,11 +1274,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     res21: Array[Int] = Array(1, 2, 3, 4, 5, 6, 7, 8, 9, 10)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1368,11 +1288,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     res22: Array[Int] = Array(1, 2, 0, 1, 2, 0, 1, 2, 0, 1)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1387,10 +1303,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     res23: Array[Int] = Array(3, 5, 4, 6, 8, 7, 9, 11, 10, 12)\n",
-    "\n",
     "  \n",
     "\n",
     "> After the broadcast variable is created, it should be used instead of\n",
@@ -1422,8 +1334,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
     "  \n",
     "\n",
     "### A more interesting example of broadcast variable\n",
@@ -1464,17 +1374,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     states: scala.collection.immutable.Map[String,String] = Map(NY -> New York, CA -> California, FL -> Florida)\n",
-    ">     countries: scala.collection.immutable.Map[String,String] = Map(USA -> United States of America, IN -> India)\n",
-    ">     broadcastStates: org.apache.spark.broadcast.Broadcast[scala.collection.immutable.Map[String,String]] = Broadcast(31)\n",
-    ">     broadcastCountries: org.apache.spark.broadcast.Broadcast[scala.collection.immutable.Map[String,String]] = Broadcast(32)\n",
-    ">     data: Seq[(String, String, String, String)] = List((James,Smith,USA,CA), (Michael,Rose,USA,NY), (Robert,Williams,USA,CA), (Maria,Jones,USA,FL))\n",
-    ">     rdd: org.apache.spark.rdd.RDD[(String, String, String, String)] = ParallelCollectionRDD[29] at parallelize at command-4158380413057424:12\n",
-    ">     rdd2: org.apache.spark.rdd.RDD[(String, String, String, String)] = MapPartitionsRDD[30] at map at command-4158380413057424:14"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1489,13 +1389,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     (James,Smith,United States of America,California)\n",
-    ">     (Michael,Rose,United States of America,New York)\n",
-    ">     (Robert,Williams,United States of America,California)\n",
-    ">     (Maria,Jones,United States of America,Florida)\n",
-    "\n",
     "  \n",
     "\n",
     "### 13. HOMEWORK\n",
@@ -1536,12 +1429,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     import scala.math._\n",
-    ">     x: Int = 1"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1561,13 +1449,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     import java.util.HashMap\n",
-    ">     map: java.util.HashMap[String,Int] = {a=1, b=2, c=3, d=4, e=5}\n",
-    ">     res26: Int = 0"
-   ]
+   "source": []
   }
  ],
  "nbformat": 4,
