--- a/_sources/000_1-sds-3-x/007_SparkSQLIntroBasics.ipynb
+++ b/_sources/000_1-sds-3-x/007_SparkSQLIntroBasics.ipynb
@@ -26,10 +26,52 @@
     "-   **READ**:\n",
     "    [https://people.csail.mit.edu/matei/papers/2015/sigmod*spark*sql.pdf](https://people.csail.mit.edu/matei/papers/2015/sigmod_spark_sql.pdf)\n",
     "\n",
-    "Some of them are embedded below in-place for your convenience.\n",
-    "\n",
-    "  \n",
-    "\n",
+    "Some of them are embedded below in-place for your convenience."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//This allows easy embedding of publicly available information into any other notebook\n",
+    "//when viewing in git-book just ignore this block - you may have to manually chase the URL in frameIt(\"URL\").\n",
+    "//Example usage:\n",
+    "// displayHTML(frameIt(\"https://en.wikipedia.org/wiki/Latent_Dirichlet_allocation#Topics_in_LDA\",250))\n",
+    "def frameIt( u:String, h:Int ) : String = {\n",
+    "      \"\"\"<iframe \n",
+    " src=\"\"\"\"+ u+\"\"\"\"\n",
+    " width=\"95%\" height=\"\"\"\" + h + \"\"\"\"\n",
+    " sandbox>\n",
+    "  <p>\n",
+    "    <a href=\"http://spark.apache.org/docs/latest/index.html\">\n",
+    "      Fallback link for browsers that, unlikely, don't support frames\n",
+    "    </a>\n",
+    "  </p>\n",
+    "</iframe>\"\"\"\n",
+    "   }\n",
+    "displayHTML(frameIt(\"https://en.wikipedia.org/wiki/SQL\",500))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "displayHTML(frameIt(\"https://en.wikipedia.org/wiki/Apache_Hive#HiveQL\",175))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "  \n",
     "\n",
     "READ -\n",
@@ -130,10 +172,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     res0: org.apache.spark.sql.SparkSession = org.apache.spark.sql.SparkSession@309b51ef\n",
-    "\n",
-    "  \n",
-    "\n",
     "Creating DataFrames\n",
     "-------------------\n",
     "\n",
@@ -209,10 +247,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     emptyDF: org.apache.spark.sql.DataFrame = []\n",
-    "\n",
-    "  \n",
-    "\n",
     "Not really interesting, or is it?\n",
     "\n",
     "**You Try!**\n",
@@ -259,10 +293,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     rangeDF: org.apache.spark.sql.DataFrame = [id: bigint]\n",
-    "\n",
-    "  \n",
-    "\n",
     "Note that Spark automatically names column as `id` and casts integers to\n",
     "type `bigint` for big integer or Long.\n",
     "\n",
@@ -282,16 +312,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     +---+\n",
-    ">     | id|\n",
-    ">     +---+\n",
-    ">     |  0|\n",
-    ">     |  1|\n",
-    ">     |  2|\n",
-    ">     +---+\n",
-    "\n",
     "  \n",
     "\n",
     "### 3. Making a DataFrame from an RDD\n",
@@ -322,11 +342,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     rdd1: org.apache.spark.rdd.RDD[(Int, Int)] = MapPartitionsRDD[75] at map at command-3398110674017915:1\n",
-    ">     res4: Array[(Int, Int)] = Array((1,2), (2,4), (3,6), (4,8), (5,10))\n",
-    "\n",
-    "  \n",
-    "\n",
     "Next, let us convert the RDD into DataFrame using the `.toDF()` method,\n",
     "as follows:"
    ]
@@ -346,10 +361,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     df1: org.apache.spark.sql.DataFrame = [_1: int, _2: int]\n",
-    "\n",
-    "  \n",
-    "\n",
     "As it is clear, the DataFrame has columns named `_1` and `_2`, each of\n",
     "type `int`. Let us see its content using the `.show()` method next."
    ]
@@ -367,18 +378,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     +---+---+\n",
-    ">     | _1| _2|\n",
-    ">     +---+---+\n",
-    ">     |  1|  2|\n",
-    ">     |  2|  4|\n",
-    ">     |  3|  6|\n",
-    ">     |  4|  8|\n",
-    ">     |  5| 10|\n",
-    ">     +---+---+\n",
-    "\n",
     "  \n",
     "\n",
     "Note that by default, i.e. without specifying any options as in\n",
@@ -403,20 +402,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     +----+-----+\n",
-    ">     |once|twice|\n",
-    ">     +----+-----+\n",
-    ">     |   1|    2|\n",
-    ">     |   2|    4|\n",
-    ">     |   3|    6|\n",
-    ">     |   4|    8|\n",
-    ">     |   5|   10|\n",
-    ">     +----+-----+\n",
-    ">\n",
-    ">     df1: org.apache.spark.sql.DataFrame = [once: int, twice: int]\n",
-    "\n",
-    "  \n",
-    "\n",
     "Of course, we can do all of the above steps to make the DataFrame `df1`\n",
     "in one line and then show it, as follows:"
    ]
@@ -437,20 +422,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     +----+-----+\n",
-    ">     |once|twice|\n",
-    ">     +----+-----+\n",
-    ">     |   1|    2|\n",
-    ">     |   2|    4|\n",
-    ">     |   3|    6|\n",
-    ">     |   4|    8|\n",
-    ">     |   5|   10|\n",
-    ">     +----+-----+\n",
-    ">\n",
-    ">     df1: org.apache.spark.sql.DataFrame = [once: int, twice: int]\n",
-    "\n",
     "  \n",
     "\n",
     "### 4. DataFrame Operations (aka Untyped Dataset Operations)\n",
@@ -486,15 +457,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     root\n",
-    ">      |-- once: integer (nullable = false)\n",
-    ">      |-- twice: integer (nullable = false)\n",
-    ">\n",
-    ">     import spark.implicits._"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -509,19 +472,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     +----+\n",
-    ">     |once|\n",
-    ">     +----+\n",
-    ">     |   1|\n",
-    ">     |   2|\n",
-    ">     |   3|\n",
-    ">     |   4|\n",
-    ">     |   5|\n",
-    ">     +----+"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -536,19 +487,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     +----+----------+\n",
-    ">     |once|(once + 1)|\n",
-    ">     +----+----------+\n",
-    ">     |   1|         2|\n",
-    ">     |   2|         3|\n",
-    ">     |   3|         4|\n",
-    ">     |   4|         5|\n",
-    ">     |   5|         6|\n",
-    ">     +----+----------+"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -563,19 +502,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     +----+--------+\n",
-    ">     |once|oncemore|\n",
-    ">     +----+--------+\n",
-    ">     |   1|       1|\n",
-    ">     |   2|       2|\n",
-    ">     |   3|       3|\n",
-    ">     |   4|       4|\n",
-    ">     |   5|       5|\n",
-    ">     +----+--------+"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -589,17 +516,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     +----+-----+\n",
-    ">     |once|twice|\n",
-    ">     +----+-----+\n",
-    ">     |   3|    6|\n",
-    ">     |   4|    8|\n",
-    ">     |   5|   10|\n",
-    ">     +----+-----+"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -615,18 +532,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     +----+-----+\n",
-    ">     |once|count|\n",
-    ">     +----+-----+\n",
-    ">     |   1|    1|\n",
-    ">     |   3|    1|\n",
-    ">     |   5|    1|\n",
-    ">     |   4|    1|\n",
-    ">     |   2|    1|\n",
-    ">     +----+-----+\n",
-    "\n",
     "  \n",
     "\n",
     "Let's make a more interesting DataFrame for `groupBy` with repeated\n",
@@ -645,19 +550,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     +----+-----+\n",
-    ">     |once|twice|\n",
-    ">     +----+-----+\n",
-    ">     |   1|    2|\n",
-    ">     |   2|    4|\n",
-    ">     |   3|    6|\n",
-    ">     |   4|    8|\n",
-    ">     |   5|   10|\n",
-    ">     +----+-----+"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -672,19 +565,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     +----+-----+\n",
-    ">     |once|twice|\n",
-    ">     +----+-----+\n",
-    ">     |   3|    6|\n",
-    ">     |   4|    8|\n",
-    ">     |   5|   10|\n",
-    ">     +----+-----+\n",
-    ">\n",
-    ">     df11: org.apache.spark.sql.DataFrame = [once: int, twice: int]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -699,24 +580,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     +----+-----+\n",
-    ">     |once|twice|\n",
-    ">     +----+-----+\n",
-    ">     |   1|    2|\n",
-    ">     |   2|    4|\n",
-    ">     |   3|    6|\n",
-    ">     |   4|    8|\n",
-    ">     |   5|   10|\n",
-    ">     |   3|    6|\n",
-    ">     |   4|    8|\n",
-    ">     |   5|   10|\n",
-    ">     +----+-----+\n",
-    ">\n",
-    ">     df111: org.apache.spark.sql.Dataset[org.apache.spark.sql.Row] = [once: int, twice: int]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -732,18 +596,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     +----+-----+\n",
-    ">     |once|count|\n",
-    ">     +----+-----+\n",
-    ">     |   1|    1|\n",
-    ">     |   3|    2|\n",
-    ">     |   5|    2|\n",
-    ">     |   4|    2|\n",
-    ">     |   2|    1|\n",
-    ">     +----+-----+\n",
-    "\n",
     "  \n",
     "\n",
     "For a complete list of the types of operations that can be performed on\n",
@@ -780,8 +632,6 @@
    "source": [
     "  \n",
     "\n",
-    "  \n",
-    "\n",
     "### 5. Running SQL Queries Programmatically\n",
     "\n",
     "The `sql` function on a `SparkSession` enables applications to run SQL\n",
@@ -800,11 +650,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     res26: org.apache.spark.sql.DataFrame = [once: int, twice: int]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -822,21 +668,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     +----+-----+\n",
-    ">     |once|twice|\n",
-    ">     +----+-----+\n",
-    ">     |   1|    2|\n",
-    ">     |   2|    4|\n",
-    ">     |   3|    6|\n",
-    ">     |   4|    8|\n",
-    ">     |   5|   10|\n",
-    ">     +----+-----+\n",
-    ">\n",
-    ">     sqlDF: org.apache.spark.sql.DataFrame = [once: int, twice: int]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -851,16 +683,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     +----+-----+\n",
-    ">     |once|twice|\n",
-    ">     +----+-----+\n",
-    ">     |   3|    6|\n",
-    ">     |   4|    8|\n",
-    ">     |   5|   10|\n",
-    ">     +----+-----+\n",
-    "\n",
     "  \n",
     "\n",
     "### 5. Using SQL for interactively querying a table is very powerful!\n",
@@ -887,11 +709,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    "[TABLE]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -908,10 +726,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    "[TABLE]\n",
-    "\n",
     "  \n",
     "\n",
     "#### Global Temporary View\n",
@@ -952,11 +766,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     rangeDS: org.apache.spark.sql.Dataset[Long] = [id: bigint]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -971,16 +781,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     +---+\n",
-    ">     | id|\n",
-    ">     +---+\n",
-    ">     |  0|\n",
-    ">     |  1|\n",
-    ">     |  2|\n",
-    ">     +---+\n",
-    "\n",
     "  \n",
     "\n",
     "We can have more complicated objects in a `DataSet` too."
@@ -1004,20 +804,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     +----+---+\n",
-    ">     |name|age|\n",
-    ">     +----+---+\n",
-    ">     |Andy| 32|\n",
-    ">     |Erik| 44|\n",
-    ">     |Anna| 15|\n",
-    ">     +----+---+\n",
-    ">\n",
-    ">     defined class Person\n",
-    ">     caseClassDS: org.apache.spark.sql.Dataset[Person] = [name: string, age: bigint]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1033,12 +820,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     primitiveDS: org.apache.spark.sql.Dataset[Int] = [value: int]\n",
-    ">     res39: Array[Int] = Array(2, 3, 4)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1052,11 +834,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     res41: org.apache.spark.sql.DataFrame = [once: int, twice: int]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1070,19 +848,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     +----+-----+\n",
-    ">     |once|twice|\n",
-    ">     +----+-----+\n",
-    ">     |   1|    2|\n",
-    ">     |   2|    4|\n",
-    ">     |   3|    6|\n",
-    ">     |   4|    8|\n",
-    ">     |   5|   10|\n",
-    ">     +----+-----+"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1097,11 +863,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     defined class singleAndDoubleIntegers"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1115,11 +877,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     ds1: org.apache.spark.sql.Dataset[singleAndDoubleIntegers] = [once: int, twice: int]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1134,18 +892,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     +----+-----+\n",
-    ">     |once|twice|\n",
-    ">     +----+-----+\n",
-    ">     |   1|    2|\n",
-    ">     |   2|    4|\n",
-    ">     |   3|    6|\n",
-    ">     |   4|    8|\n",
-    ">     |   5|   10|\n",
-    ">     +----+-----+\n",
-    "\n",
     "  \n",
     "\n",
     "------------------------------------------------------------------------\n",
