--- a/_sources/000_1-sds-3-x/007a_SparkSQLProgGuide_HW.ipynb
+++ b/_sources/000_1-sds-3-x/007a_SparkSQLProgGuide_HW.ipynb
@@ -73,8 +73,37 @@
     "    -   click on a link in the displayed html page to see the content of\n",
     "        the clicked link and\n",
     "    -   then right-click on the page and click on the arrow keys `<-`\n",
-    "        and `->` to go back or forward.\n",
-    "\n",
+    "        and `->` to go back or forward."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//This allows easy embedding of publicly available information into any other notebook\n",
+    "//Example usage:\n",
+    "// displayHTML(frameIt(\"https://en.wikipedia.org/wiki/Latent_Dirichlet_allocation#Topics_in_LDA\",250))\n",
+    "def frameIt( u:String, h:Int ) : String = {\n",
+    "      \"\"\"<iframe \n",
+    " src=\"\"\"\"+ u+\"\"\"\"\n",
+    " width=\"95%\" height=\"\"\"\" + h + \"\"\"\"\n",
+    " sandbox>\n",
+    "  <p>\n",
+    "    <a href=\"http://spark.apache.org/docs/latest/index.html\">\n",
+    "      Fallback link for browsers that, unlikely, don't support frames\n",
+    "    </a>\n",
+    "  </p>\n",
+    "</iframe>\"\"\"\n",
+    "   }\n",
+    "displayHTML(frameIt(\"https://spark.apache.org/docs/latest/sql-programming-guide.html\",750))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "  \n",
     "\n",
     "### Let's go through the programming guide in databricks now\n",
@@ -167,6 +196,48 @@
     "<https://spark.apache.org/docs/latest/sql-ref.html> to learn SQL\n",
     "quickly."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "displayHTML(frameIt(\"https://en.wikipedia.org/wiki/SQL\",500))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "displayHTML(frameIt(\"https://en.wikipedia.org/wiki/Apache_Hive#HiveQL\",175))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "displayHTML(frameIt(\"https://spark.apache.org/docs/latest/sql-ref.html\",700))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "nbformat": 4,
