--- a/_sources/000_1-sds-3-x/007d_SparkSQLProgGuide_HW.ipynb
+++ b/_sources/000_1-sds-3-x/007d_SparkSQLProgGuide_HW.ipynb
@@ -106,13 +106,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     org.apache.spark.sql.DataFrameReader@1c18c1e7\n",
-    ">     org.apache.spark.sql.DataFrameWriter@20187329\n",
-    ">     df: org.apache.spark.sql.Dataset[Long] = [id: bigint]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -135,23 +129,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     +----------+------+\n",
-    ">     |  platform|visits|\n",
-    ">     +----------+------+\n",
-    ">     |       SMS| 61652|\n",
-    ">     |       SMS| 44547|\n",
-    ">     |    Flickr|  null|\n",
-    ">     |Newsletter|  null|\n",
-    ">     |   Twitter|   389|\n",
-    ">     +----------+------+\n",
-    ">     only showing top 5 rows\n",
-    ">\n",
-    ">     df_save: org.apache.spark.sql.DataFrame = [platform: string, visits: int]\n",
-    ">     df: org.apache.spark.sql.DataFrame = [platform: string, visits: int]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -166,11 +144,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    "[TABLE]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -184,11 +158,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    "[TABLE]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -204,20 +174,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     +----------+------+\n",
-    ">     |  platform|visits|\n",
-    ">     +----------+------+\n",
-    ">     |       SMS| 61652|\n",
-    ">     |       SMS| 44547|\n",
-    ">     |    Flickr|  null|\n",
-    ">     |Newsletter|  null|\n",
-    ">     |   Twitter|   389|\n",
-    ">     +----------+------+\n",
-    ">     only showing top 5 rows"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -237,23 +194,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     +----------+------+\n",
-    ">     |  platform|visits|\n",
-    ">     +----------+------+\n",
-    ">     |       SMS| 61652|\n",
-    ">     |       SMS| 44547|\n",
-    ">     |    Flickr|  null|\n",
-    ">     |Newsletter|  null|\n",
-    ">     |   Twitter|   389|\n",
-    ">     +----------+------+\n",
-    ">     only showing top 5 rows\n",
-    ">\n",
-    ">     df_save: org.apache.spark.sql.DataFrame = [platform: string, visits: int]\n",
-    ">     df: org.apache.spark.sql.DataFrame = [platform: string, visits: bigint]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -263,26 +204,13 @@
    "source": [
     "# Loading JSON dataset in Python\n",
     "dfPy = spark.read.json(\"/tmp/platforms.json\")\n",
-    "dfPy.show(5)\n"
+    "dfPy.show(5)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     +----------+------+\n",
-    ">     |  platform|visits|\n",
-    ">     +----------+------+\n",
-    ">     |       SMS| 61652|\n",
-    ">     |       SMS| 44547|\n",
-    ">     |    Flickr|  null|\n",
-    ">     |Newsletter|  null|\n",
-    ">     |   Twitter|   389|\n",
-    ">     +----------+------+\n",
-    ">     only showing top 5 rows\n",
-    "\n",
     "  \n",
     "\n",
     "### Manually Specifying Options\n",
@@ -314,43 +242,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     +----------+\n",
-    ">     |  platform|\n",
-    ">     +----------+\n",
-    ">     |       SMS|\n",
-    ">     |       SMS|\n",
-    ">     |    Flickr|\n",
-    ">     |Newsletter|\n",
-    ">     |   Twitter|\n",
-    ">     |   Twitter|\n",
-    ">     |   Android|\n",
-    ">     |   Android|\n",
-    ">     |   Android|\n",
-    ">     |Broadcastr|\n",
-    ">     +----------+\n",
-    ">     only showing top 10 rows\n",
-    ">\n",
-    ">     +----------+\n",
-    ">     |  platform|\n",
-    ">     +----------+\n",
-    ">     |       SMS|\n",
-    ">     |       SMS|\n",
-    ">     |    Flickr|\n",
-    ">     |Newsletter|\n",
-    ">     |   Twitter|\n",
-    ">     |   Twitter|\n",
-    ">     |   Android|\n",
-    ">     |   Android|\n",
-    ">     |   Android|\n",
-    ">     |Broadcastr|\n",
-    ">     +----------+\n",
-    ">     only showing top 10 rows\n",
-    ">\n",
-    ">     json: org.apache.spark.sql.DataFrame = [platform: string, visits: bigint]\n",
-    ">     parquet: org.apache.spark.sql.DataFrame = [platform: string, visits: int]\n",
-    "\n",
-    "  \n",
-    "\n",
     "### Run SQL on files directly\n",
     "\n",
     "Instead of using read API to load a file into DataFrame and query it,\n",
@@ -371,14 +262,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     root\n",
-    ">      |-- platform: string (nullable = true)\n",
-    ">      |-- visits: integer (nullable = true)\n",
-    ">\n",
-    ">     df: org.apache.spark.sql.DataFrame = [platform: string, visits: int]\n",
-    "\n",
     "  \n",
     "\n",
     "### Save Modes\n",
@@ -433,16 +316,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     +------------------+--------+-----------+---------+-----------+\n",
-    ">     |              name|database|description|tableType|isTemporary|\n",
-    ">     +------------------+--------+-----------+---------+-----------+\n",
-    ">     |  sentimentlex_csv| default|       null| EXTERNAL|      false|\n",
-    ">     |social_media_usage| default|       null|  MANAGED|      false|\n",
-    ">     +------------------+--------+-----------+---------+-----------+"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -475,18 +349,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     +------------------+--------+-----------+---------+-----------+\n",
-    ">     |              name|database|description|tableType|isTemporary|\n",
-    ">     +------------------+--------+-----------+---------+-----------+\n",
-    ">     |  sentimentlex_csv| default|       null| EXTERNAL|      false|\n",
-    ">     |      simple_range| default|       null|  MANAGED|      false|\n",
-    ">     |social_media_usage| default|       null|  MANAGED|      false|\n",
-    ">     +------------------+--------+-----------+---------+-----------+\n",
-    ">\n",
-    ">     df: org.apache.spark.sql.Dataset[Long] = [id: bigint]\n",
-    "\n",
     "  \n",
     "\n",
     "Parquet Files\n",
@@ -522,8 +384,38 @@
     "        Dremel, and explain how it complements MapReduce-based\n",
     "        computing. We present a novel columnar storage representation\n",
     "        for nested records and discuss experiments on few-thousand node\n",
-    "        instances of the system.\n",
-    "\n",
+    "        instances of the system."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//This allows easy embedding of publicly available information into any other notebook\n",
+    "//when viewing in git-book just ignore this block - you may have to manually chase the URL in frameIt(\"URL\").\n",
+    "//Example usage:\n",
+    "// displayHTML(frameIt(\"https://en.wikipedia.org/wiki/Latent_Dirichlet_allocation#Topics_in_LDA\",250))\n",
+    "def frameIt( u:String, h:Int ) : String = {\n",
+    "      \"\"\"<iframe \n",
+    " src=\"\"\"\"+ u+\"\"\"\"\n",
+    " width=\"95%\" height=\"\"\"\" + h + \"\"\"\"\n",
+    " sandbox>\n",
+    "  <p>\n",
+    "    <a href=\"http://spark.apache.org/docs/latest/index.html\">\n",
+    "      Fallback link for browsers that, unlikely, don't support frames\n",
+    "    </a>\n",
+    "  </p>\n",
+    "</iframe>\"\"\"\n",
+    "   }\n",
+    "displayHTML(frameIt(\"https://parquet.apache.org/documentation/latest/\",500))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "  \n",
     "\n",
     "### Loading Data Programmatically"
@@ -551,31 +443,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     Name: Flickr\n",
-    ">     Name: iPhone\n",
-    ">     Name: YouTube\n",
-    ">     Name: WordPress\n",
-    ">     Name: SMS\n",
-    ">     Name: iPhone App\n",
-    ">     Name: Youtube\n",
-    ">     Name: Instagram\n",
-    ">     Name: iPhone app\n",
-    ">     Name: Linked-In\n",
-    ">     Name: Twitter\n",
-    ">     Name: TOTAL\n",
-    ">     Name: Tumblr\n",
-    ">     Name: Newsletter\n",
-    ">     Name: Pinterest\n",
-    ">     Name: Android\n",
-    ">     Name: Foursquare\n",
-    ">     Name: Google+\n",
-    ">     Name: Foursquare (Badge Unlock)\n",
-    ">     Name: Facebook\n",
-    ">     parquetFile: org.apache.spark.sql.DataFrame = [platform: string, visits: int]\n",
-    ">     platforms: org.apache.spark.sql.DataFrame = [platform: string]\n",
-    "\n",
-    "  \n",
-    "\n",
     "Bucketing, Sorting and Partitioning\n",
     "-----------------------------------\n",
     "\n",
@@ -597,10 +464,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     social_media_usage_DF: org.apache.spark.sql.DataFrame = [agency: string, platform: string ... 3 more fields]\n",
-    "\n",
     "  \n",
     "\n",
     "Find full example code at -\n",
@@ -644,11 +507,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    "[TABLE]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -662,11 +521,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     social_media_usage_readFromParquet_DF: org.apache.spark.sql.DataFrame = [agency: string, platform: string ... 3 more fields]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -680,11 +535,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     res34: Long = 5898"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -698,11 +549,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     res33: Int = 1"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -716,16 +563,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     root\n",
-    ">      |-- agency: string (nullable = true)\n",
-    ">      |-- platform: string (nullable = true)\n",
-    ">      |-- url: string (nullable = true)\n",
-    ">      |-- date: string (nullable = true)\n",
-    ">      |-- visits: integer (nullable = true)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -739,11 +577,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     res36: Long = 23"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -774,11 +608,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    "[TABLE]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -792,11 +622,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    "[TABLE]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -811,10 +637,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     res48: Int = 4\n",
-    "\n",
     "  \n",
     "\n",
     "We can also use a fixed number of buckets and sort by a column within\n",
@@ -854,20 +676,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     +--------------------+--------+-----------+---------+-----------+\n",
-    ">     |                name|database|description|tableType|isTemporary|\n",
-    ">     +--------------------+--------+-----------+---------+-----------+\n",
-    ">     |    sentimentlex_csv| default|       null| EXTERNAL|      false|\n",
-    ">     |        simple_range| default|       null|  MANAGED|      false|\n",
-    ">     |  social_media_usage| default|       null|  MANAGED|      false|\n",
-    ">     |social_media_usag...| default|       null|  MANAGED|      false|\n",
-    ">     |         parquetfile|    null|       null|TEMPORARY|       true|\n",
-    ">     |           platforms|    null|       null|TEMPORARY|       true|\n",
-    ">     +--------------------+--------+-----------+---------+-----------+"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -881,11 +690,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     df: org.apache.spark.sql.DataFrame = [agency: string, url: string ... 3 more fields]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -900,10 +705,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     res53: Int = 10\n",
-    "\n",
     "  \n",
     "\n",
     "### Partition Discovery\n",
@@ -991,19 +792,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     root\n",
-    ">      |-- single: integer (nullable = true)\n",
-    ">      |-- double: integer (nullable = true)\n",
-    ">      |-- triple: integer (nullable = true)\n",
-    ">      |-- key: integer (nullable = true)\n",
-    ">\n",
-    ">     df1: org.apache.spark.sql.DataFrame = [single: int, double: int]\n",
-    ">     df2: org.apache.spark.sql.DataFrame = [single: int, triple: int]\n",
-    ">     df3: org.apache.spark.sql.DataFrame = [single: int, double: int ... 2 more fields]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1018,23 +807,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     +------+------+------+---+\n",
-    ">     |single|double|triple|key|\n",
-    ">     +------+------+------+---+\n",
-    ">     |     9|  null|    27|  2|\n",
-    ">     |    10|  null|    30|  2|\n",
-    ">     |     4|     8|  null|  1|\n",
-    ">     |     5|    10|  null|  1|\n",
-    ">     |     1|     2|  null|  1|\n",
-    ">     |     2|     4|  null|  1|\n",
-    ">     |     6|  null|    18|  2|\n",
-    ">     |     7|  null|    21|  2|\n",
-    ">     |     8|  null|    24|  2|\n",
-    ">     |     3|     6|  null|  1|\n",
-    ">     +------+------+------+---+\n",
-    "\n",
     "  \n",
     "\n",
     "### Hive metastore Parquet table conversion\n",
@@ -1194,53 +966,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     root\n",
-    ">      |-- platform: string (nullable = true)\n",
-    ">      |-- visits: long (nullable = true)\n",
-    ">\n",
-    ">     +--------+------+\n",
-    ">     |platform|visits|\n",
-    ">     +--------+------+\n",
-    ">     |Facebook|     3|\n",
-    ">     |Facebook|    36|\n",
-    ">     |Facebook|    47|\n",
-    ">     |Facebook|    90|\n",
-    ">     |Facebook|   105|\n",
-    ">     |Facebook|   123|\n",
-    ">     |Facebook|   119|\n",
-    ">     |Facebook|   148|\n",
-    ">     |Facebook|   197|\n",
-    ">     |Facebook|   179|\n",
-    ">     |Facebook|   200|\n",
-    ">     |Facebook|   200|\n",
-    ">     |Facebook|   183|\n",
-    ">     |Facebook|   190|\n",
-    ">     |Facebook|   227|\n",
-    ">     |Facebook|   194|\n",
-    ">     |Facebook|   243|\n",
-    ">     |Facebook|   237|\n",
-    ">     |Facebook|   234|\n",
-    ">     |Facebook|   238|\n",
-    ">     +--------+------+\n",
-    ">     only showing top 20 rows\n",
-    ">\n",
-    ">     +----------------+----+\n",
-    ">     |         address|name|\n",
-    ">     +----------------+----+\n",
-    ">     |[Columbus, Ohio]|IWyn|\n",
-    ">     +----------------+----+\n",
-    ">\n",
-    ">     command-1267216879634442:22: warning: method json in class DataFrameReader is deprecated (since 2.2.0): Use json(Dataset[String]) instead.\n",
-    ">     val anotherPlatforms = spark.read.json(rdd)\n",
-    ">                                       ^\n",
-    ">     path: String = /tmp/platforms.json\n",
-    ">     platforms: org.apache.spark.sql.DataFrame = [platform: string, visits: bigint]\n",
-    ">     facebook: org.apache.spark.sql.DataFrame = [platform: string, visits: bigint]\n",
-    ">     rdd: org.apache.spark.rdd.RDD[String] = ParallelCollectionRDD[235] at parallelize at command-1267216879634442:21\n",
-    ">     anotherPlatforms: org.apache.spark.sql.DataFrame = [address: struct<city: string, state: string>, name: string]\n",
-    "\n",
     "  \n",
     "\n",
     "Hive Tables\n",
