--- a/_sources/000_1-sds-3-x/007e_SparkSQLProgGuide_HW.ipynb
+++ b/_sources/000_1-sds-3-x/007e_SparkSQLProgGuide_HW.ipynb
@@ -20,6 +20,34 @@
     "\n",
     "-   https://spark.apache.org/docs/latest/sql-performance-tuning.html"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//This allows easy embedding of publicly available information into any other notebook\n",
+    "//Example usage:\n",
+    "// displayHTML(frameIt(\"https://en.wikipedia.org/wiki/Latent_Dirichlet_allocation#Topics_in_LDA\",250))\n",
+    "def frameIt( u:String, h:Int ) : String = {\n",
+    "      \"\"\"<iframe \n",
+    " src=\"\"\"\"+ u+\"\"\"\"\n",
+    " width=\"95%\" height=\"\"\"\" + h + \"\"\"\">\n",
+    "  <p>\n",
+    "    <a href=\"http://spark.apache.org/docs/latest/index.html\">\n",
+    "      Fallback link for browsers that, unlikely, don't support frames\n",
+    "    </a>\n",
+    "  </p>\n",
+    "</iframe>\"\"\"\n",
+    "   }\n",
+    "displayHTML(frameIt(\"https://spark.apache.org/docs/latest/sql-performance-tuning.html\",700))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "nbformat": 4,
