--- a/_sources/000_1-sds-3-x/010_wikipediaClickStream_01ETLEDA.ipynb
+++ b/_sources/000_1-sds-3-x/010_wikipediaClickStream_01ETLEDA.ipynb
@@ -75,10 +75,6 @@
    "source": [
     "  \n",
     "\n",
-    "[TABLE]\n",
-    "\n",
-    "  \n",
-    "\n",
     "### Let us first understand this Wikimedia data set a bit more\n",
     "\n",
     "Let's read the datahub-hosted link\n",
@@ -87,8 +83,38 @@
     "[blog](http://ewulczyn.github.io/Wikipedia_Clickstream_Getting_Started/)\n",
     "by Ellery Wulczyn, Data Scientist at The Wikimedia Foundation, to better\n",
     "understand how the data was generated (remember to Right-Click and use\n",
-    "-&gt; and &lt;- if navigating within the embedded html frame below).\n",
-    "\n",
+    "-&gt; and &lt;- if navigating within the embedded html frame below)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//This allows easy embedding of publicly available information into any other notebook\n",
+    "//when viewing in git-book just ignore this block - you may have to manually chase the URL in frameIt(\"URL\").\n",
+    "//Example usage:\n",
+    "// displayHTML(frameIt(\"https://en.wikipedia.org/wiki/Latent_Dirichlet_allocation#Topics_in_LDA\",250))\n",
+    "def frameIt( u:String, h:Int ) : String = {\n",
+    "      \"\"\"<iframe \n",
+    " src=\"\"\"\"+ u+\"\"\"\"\n",
+    " width=\"95%\" height=\"\"\"\" + h + \"\"\"\"\n",
+    " sandbox>\n",
+    "  <p>\n",
+    "    <a href=\"http://spark.apache.org/docs/latest/index.html\">\n",
+    "      Fallback link for browsers that, unlikely, don't support frames\n",
+    "    </a>\n",
+    "  </p>\n",
+    "</iframe>\"\"\"\n",
+    "   }\n",
+    "displayHTML(frameIt(\"https://datahub.io/dataset/wikipedia-clickstream\",500))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "  \n",
     "\n",
     "Run the next two cells for some housekeeping."
@@ -109,8 +135,6 @@
    "source": [
     "  \n",
     "\n",
-    "  \n",
-    "\n",
     "### Loading and Exploring the data"
    ]
   },
@@ -129,10 +153,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     data: org.apache.spark.rdd.RDD[String] = dbfs:///databricks-datasets/wikipedia-datasets/data-001/clickstream/raw-uncompressed MapPartitionsRDD[605] at textFile at command-1267216879634612:1\n",
-    "\n",
-    "  \n",
-    "\n",
     "##### Looking at the first few lines of the data"
    ]
   },
@@ -148,15 +168,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     prev_id\tcurr_id\tn\tprev_title\tcurr_title\ttype\n",
-    ">     \t3632887\t121\tother-google\t!!\tother\n",
-    ">     \t3632887\t93\tother-wikipedia\t!!\tother\n",
-    ">     \t3632887\t46\tother-empty\t!!\tother\n",
-    ">     \t3632887\t10\tother-other\t!!\tother"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -171,10 +183,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     res3: Array[String] = Array(prev_id\tcurr_id\tn\tprev_title\tcurr_title\ttype, \"\t3632887\t121\tother-google\t!!\tother\")\n",
-    "\n",
     "  \n",
     "\n",
     "-   The first line looks like a header\n",
@@ -268,10 +276,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     clickstream: org.apache.spark.sql.DataFrame = [prev_id: int, curr_id: int ... 4 more fields]\n",
-    "\n",
-    "  \n",
-    "\n",
     "##### Print the schema"
    ]
   },
@@ -288,16 +292,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     root\n",
-    ">      |-- prev_id: integer (nullable = true)\n",
-    ">      |-- curr_id: integer (nullable = true)\n",
-    ">      |-- n: integer (nullable = true)\n",
-    ">      |-- prev_title: string (nullable = true)\n",
-    ">      |-- curr_title: string (nullable = true)\n",
-    ">      |-- type: string (nullable = true)\n",
-    "\n",
     "  \n",
     "\n",
     "#### Display some sample data"
@@ -318,12 +312,6 @@
    "source": [
     "  \n",
     "\n",
-    "[TABLE]\n",
-    "\n",
-    "Truncated to 30 rows\n",
-    "\n",
-    "  \n",
-    "\n",
     "Display is a utility provided by Databricks. If you are programming\n",
     "directly in Spark, use the show(numRows: Int) function of DataFrame"
    ]
@@ -341,19 +329,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     +-------+-------+---+------------------+----------+-----+\n",
-    ">     |prev_id|curr_id|  n|        prev_title|curr_title| type|\n",
-    ">     +-------+-------+---+------------------+----------+-----+\n",
-    ">     |   null|3632887|121|      other-google|        !!|other|\n",
-    ">     |   null|3632887| 93|   other-wikipedia|        !!|other|\n",
-    ">     |   null|3632887| 46|       other-empty|        !!|other|\n",
-    ">     |   null|3632887| 10|       other-other|        !!|other|\n",
-    ">     |  64486|3632887| 11|!_(disambiguation)|        !!|other|\n",
-    ">     +-------+-------+---+------------------+----------+-----+\n",
-    ">     only showing top 5 rows\n",
-    "\n",
     "  \n",
     "\n",
     "### Reading from disk vs memory\n",
@@ -381,10 +356,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     res8: Long = 22509897\n",
-    "\n",
-    "  \n",
-    "\n",
     "-   It took about several minutes to read the 1.2 GB file into your\n",
     "    Spark cluster. The file has 22.5 million rows/lines.\n",
     "-   Although we have called cache, remember that it is evaluated\n",
@@ -406,10 +377,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     res9: Long = 22509897\n",
-    "\n",
     "  \n",
     "\n",
     "-   Orders of magnitude faster!\n",
@@ -443,10 +410,6 @@
    "source": [
     "  \n",
     "\n",
-    "[TABLE]\n",
-    "\n",
-    "  \n",
-    "\n",
     "### Who sent the most traffic to Wikipedia in Feb 2015?\n",
     "\n",
     "In other words, who were the top referers to Wikipedia?"
@@ -470,10 +433,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    "[TABLE]\n",
-    "\n",
     "  \n",
     "\n",
     "As expected, the top referer by a large margin is Google. Next comes\n",
@@ -511,10 +470,6 @@
    "source": [
     "  \n",
     "\n",
-    "[TABLE]\n",
-    "\n",
-    "  \n",
-    "\n",
     "#### What percentage of page visits in Wikipedia are from other pages in Wikipedia itself?"
    ]
   },
@@ -537,12 +492,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     allClicks: Long = 3283067885\n",
-    ">     referals: Long = 1095462001\n",
-    ">     res15: Double = 33.36702253416853\n",
-    "\n",
-    "  \n",
-    "\n",
     "#### Register the DataFrame to perform more complex queries"
    ]
   },
@@ -559,8 +508,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
     "  \n",
     "\n",
     "#### Which Wikipedia pages have the most referrals to the Donald Trump page?"
@@ -585,10 +532,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    "[TABLE]\n",
-    "\n",
     "  \n",
     "\n",
     "#### YouTry: Top referrers to other 2016 US presidential candidate pages\n",
@@ -624,11 +567,185 @@
     "Earth.\n",
     "\n",
     "You need to hit the Play Button in next cell and 'Run Cell' exactly\n",
-    "once.\n",
-    "\n",
-    ">     Warning: classes defined within packages cannot be redefined without a cluster restart.\n",
-    ">     Compilation successful."
+    "once."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "package d3ivan\n",
+    "// We use a package object so that we can define top level classes like Edge that need to be used in other cells\n",
+    "\n",
+    "import org.apache.spark.sql._\n",
+    "import com.databricks.backend.daemon.driver.EnhancedRDDFunctions.displayHTML\n",
+    "\n",
+    "case class Edge(src: String, dest: String, count: Long)\n",
+    "\n",
+    "case class Node(name: String)\n",
+    "case class Link(source: Int, target: Int, value: Long)\n",
+    "case class Graph(nodes: Seq[Node], links: Seq[Link])\n",
+    "\n",
+    "object graphs {\n",
+    "// val sqlContext = SQLContext.getOrCreate(org.apache.spark.SparkContext.getOrCreate())  /// fix\n",
+    "val sqlContext = SparkSession.builder().getOrCreate().sqlContext\n",
+    "import sqlContext.implicits._\n",
+    "  \n",
+    "def force(clicks: Dataset[Edge], height: Int = 100, width: Int = 960): Unit = {\n",
+    "  val data = clicks.collect()\n",
+    "  val nodes = (data.map(_.src) ++ data.map(_.dest)).map(_.replaceAll(\"_\", \" \")).toSet.toSeq.map(Node)\n",
+    "  val links = data.map { t =>\n",
+    "    Link(nodes.indexWhere(_.name == t.src.replaceAll(\"_\", \" \")), nodes.indexWhere(_.name == t.dest.replaceAll(\"_\", \" \")), t.count / 20 + 1)\n",
+    "  }\n",
+    "  showGraph(height, width, Seq(Graph(nodes, links)).toDF().toJSON.first())\n",
+    "}\n",
+    "\n",
+    "/**\n",
+    " * Displays a force directed graph using d3\n",
+    " * input: {\"nodes\": [{\"name\": \"...\"}], \"links\": [{\"source\": 1, \"target\": 2, \"value\": 0}]}\n",
+    " */\n",
+    "def showGraph(height: Int, width: Int, graph: String): Unit = {\n",
+    "\n",
+    "displayHTML(s\"\"\"\n",
+    "<style>\n",
+    "\n",
+    ".node_circle {\n",
+    "  stroke: #777;\n",
+    "  stroke-width: 1.3px;\n",
+    "}\n",
+    "\n",
+    ".node_label {\n",
+    "  pointer-events: none;\n",
+    "}\n",
+    "\n",
+    ".link {\n",
+    "  stroke: #777;\n",
+    "  stroke-opacity: .2;\n",
+    "}\n",
+    "\n",
+    ".node_count {\n",
+    "  stroke: #777;\n",
+    "  stroke-width: 1.0px;\n",
+    "  fill: #999;\n",
+    "}\n",
+    "\n",
+    "text.legend {\n",
+    "  font-family: Verdana;\n",
+    "  font-size: 13px;\n",
+    "  fill: #000;\n",
+    "}\n",
+    "\n",
+    ".node text {\n",
+    "  font-family: \"Helvetica Neue\",\"Helvetica\",\"Arial\",sans-serif;\n",
+    "  font-size: 17px;\n",
+    "  font-weight: 200;\n",
+    "}\n",
+    "\n",
+    "</style>\n",
+    "\n",
+    "<div id=\"clicks-graph\">\n",
+    "<script src=\"//d3js.org/d3.v3.min.js\"></script>\n",
+    "<script>\n",
+    "\n",
+    "var graph = $graph;\n",
+    "\n",
+    "var width = $width,\n",
+    "    height = $height;\n",
+    "\n",
+    "var color = d3.scale.category20();\n",
+    "\n",
+    "var force = d3.layout.force()\n",
+    "    .charge(-700)\n",
+    "    .linkDistance(180)\n",
+    "    .size([width, height]);\n",
+    "\n",
+    "var svg = d3.select(\"#clicks-graph\").append(\"svg\")\n",
+    "    .attr(\"width\", width)\n",
+    "    .attr(\"height\", height);\n",
+    "    \n",
+    "force\n",
+    "    .nodes(graph.nodes)\n",
+    "    .links(graph.links)\n",
+    "    .start();\n",
+    "\n",
+    "var link = svg.selectAll(\".link\")\n",
+    "    .data(graph.links)\n",
+    "    .enter().append(\"line\")\n",
+    "    .attr(\"class\", \"link\")\n",
+    "    .style(\"stroke-width\", function(d) { return Math.sqrt(d.value); });\n",
+    "\n",
+    "var node = svg.selectAll(\".node\")\n",
+    "    .data(graph.nodes)\n",
+    "    .enter().append(\"g\")\n",
+    "    .attr(\"class\", \"node\")\n",
+    "    .call(force.drag);\n",
+    "\n",
+    "node.append(\"circle\")\n",
+    "    .attr(\"r\", 10)\n",
+    "    .style(\"fill\", function (d) {\n",
+    "    if (d.name.startsWith(\"other\")) { return color(1); } else { return color(2); };\n",
+    "})\n",
+    "\n",
+    "node.append(\"text\")\n",
+    "      .attr(\"dx\", 10)\n",
+    "      .attr(\"dy\", \".35em\")\n",
+    "      .text(function(d) { return d.name });\n",
+    "      \n",
+    "//Now we are giving the SVGs co-ordinates - the force layout is generating the co-ordinates which this code is using to update the attributes of the SVG elements\n",
+    "force.on(\"tick\", function () {\n",
+    "    link.attr(\"x1\", function (d) {\n",
+    "        return d.source.x;\n",
+    "    })\n",
+    "        .attr(\"y1\", function (d) {\n",
+    "        return d.source.y;\n",
+    "    })\n",
+    "        .attr(\"x2\", function (d) {\n",
+    "        return d.target.x;\n",
+    "    })\n",
+    "        .attr(\"y2\", function (d) {\n",
+    "        return d.target.y;\n",
+    "    });\n",
+    "    d3.selectAll(\"circle\").attr(\"cx\", function (d) {\n",
+    "        return d.x;\n",
+    "    })\n",
+    "        .attr(\"cy\", function (d) {\n",
+    "        return d.y;\n",
+    "    });\n",
+    "    d3.selectAll(\"text\").attr(\"x\", function (d) {\n",
+    "        return d.x;\n",
+    "    })\n",
+    "        .attr(\"y\", function (d) {\n",
+    "        return d.y;\n",
+    "    });\n",
+    "});\n",
+    "</script>\n",
+    "</div>\n",
+    "\"\"\")\n",
+    "}\n",
+    "  \n",
+    "  def help() = {\n",
+    "displayHTML(\"\"\"\n",
+    "<p>\n",
+    "Produces a force-directed graph given a collection of edges of the following form:</br>\n",
+    "<tt><font color=\"#a71d5d\">case class</font> <font color=\"#795da3\">Edge</font>(<font color=\"#ed6a43\">src</font>: <font color=\"#a71d5d\">String</font>, <font color=\"#ed6a43\">dest</font>: <font color=\"#a71d5d\">String</font>, <font color=\"#ed6a43\">count</font>: <font color=\"#a71d5d\">Long</font>)</tt>\n",
+    "</p>\n",
+    "<p>Usage:<br/>\n",
+    "<tt><font color=\"#a71d5d\">import</font> <font color=\"#ed6a43\">d3._</font></tt><br/>\n",
+    "<tt><font color=\"#795da3\">graphs.force</font>(</br>\n",
+    "&nbsp;&nbsp;<font color=\"#ed6a43\">height</font> = <font color=\"#795da3\">500</font>,<br/>\n",
+    "&nbsp;&nbsp;<font color=\"#ed6a43\">width</font> = <font color=\"#795da3\">500</font>,<br/>\n",
+    "&nbsp;&nbsp;<font color=\"#ed6a43\">clicks</font>: <font color=\"#795da3\">Dataset</font>[<font color=\"#795da3\">Edge</font>])</tt>\n",
+    "</p>\"\"\")\n",
+    "  }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -669,8 +786,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
     "  \n",
     "\n",
     "What we have done above is essentially pass the output of an SQL query\n",
@@ -719,6 +834,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "displayHTML(frameIt(\"https://parquet.apache.org/documentation/latest/\",350))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "// Convert the DatFrame to a more efficent format to speed up our analysis\n",
     "clickstream.\n",
     "  write.\n",
@@ -730,8 +859,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
     "  \n",
     "\n",
     "#### Load parquet file efficiently and quickly into a DataFrame\n",
@@ -755,11 +882,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     clicks: org.apache.spark.sql.DataFrame = [prev_id: int, curr_id: int ... 4 more fields]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -773,17 +896,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     root\n",
-    ">      |-- prev_id: integer (nullable = true)\n",
-    ">      |-- curr_id: integer (nullable = true)\n",
-    ">      |-- n: integer (nullable = true)\n",
-    ">      |-- prev_title: string (nullable = true)\n",
-    ">      |-- curr_title: string (nullable = true)\n",
-    ">      |-- type: string (nullable = true)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -798,12 +911,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    "[TABLE]\n",
-    "\n",
-    "Truncated to 30 rows\n",
-    "\n",
     "  \n",
     "\n",
     "##### DataFrame in python"
@@ -836,11 +943,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     Out[2]: DataFrame[prev_id: int, curr_id: int, n: int, prev_title: string, curr_title: string, type: string]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -855,34 +958,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     +--------+-------+---+--------------------+----------+-----+\n",
-    ">     | prev_id|curr_id|  n|          prev_title|curr_title| type|\n",
-    ">     +--------+-------+---+--------------------+----------+-----+\n",
-    ">     |  334751|  19271| 24|            Cambodia|  Mongolia| link|\n",
-    ">     |     737|  19271| 24|         Afghanistan|  Mongolia|other|\n",
-    ">     |18603746|  19271| 13|             Beijing|  Mongolia| link|\n",
-    ">     | 7770444|  19271| 10|Agriculture_in_Mo...|  Mongolia| link|\n",
-    ">     | 7712057|  19271| 12|Christianity_in_M...|  Mongolia| link|\n",
-    ">     |16489766|  19271| 11| Cities_of_East_Asia|  Mongolia| link|\n",
-    ">     |31632993|  19271| 10|Assassin's_Creed:...|  Mongolia| link|\n",
-    ">     | 2421391|  19271| 32|              Bhutan|  Mongolia| link|\n",
-    ">     |17961792|  19271| 66|China–Mongolia_re...|  Mongolia| link|\n",
-    ">     | 1105940|  19271| 26|            Borjigin|  Mongolia| link|\n",
-    ">     |   56896|  19271| 33|     Altai_Mountains|  Mongolia| link|\n",
-    ">     | 5037822|  19271| 11|Economy_of_the_Mo...|  Mongolia| link|\n",
-    ">     |   78449|  19271| 34|  Developing_country|  Mongolia| link|\n",
-    ">     |19605700|  19271|416|           East_Asia|  Mongolia| link|\n",
-    ">     | 5042916|  19271| 11|              Canada|  Mongolia|other|\n",
-    ">     |    3383|  19271| 13|              Brazil|  Mongolia|other|\n",
-    ">     |  572720|  19271| 11|Biligtü_Khan_Ayus...|  Mongolia| link|\n",
-    ">     | 1496582|  19271| 40|        Asia-Pacific|  Mongolia| link|\n",
-    ">     |    6742|  19271| 52|        Central_Asia|  Mongolia| link|\n",
-    ">     | 2067400|  19271| 18|Democratic_Party_...|  Mongolia| link|\n",
-    ">     +--------+-------+---+--------------------+----------+-----+\n",
-    ">     only showing top 20 rows\n",
-    "\n",
     "  \n",
     "\n",
     "Now you can continue from the original python notebook tweeted by\n",
@@ -920,7 +995,7 @@
     "\n",
     "# just a quick test\n",
     "df <- createDataFrame(faithful)\n",
-    "head(df)\n"
+    "head(df)"
    ]
   },
   {
@@ -971,13 +1046,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    "[TABLE]\n",
-    "\n",
-    "Truncated to 30 rows"
-   ]
+   "source": []
   }
  ],
  "nbformat": 4,
