--- a/_sources/000_1-sds-3-x/009_PowerPlantPipeline_01ETLEDA.ipynb
+++ b/_sources/000_1-sds-3-x/009_PowerPlantPipeline_01ETLEDA.ipynb
@@ -75,17 +75,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "//This allows easy embedding of publicly available information into any other notebook\n",
+    "//when viewing in git-book just ignore this block - you may have to manually chase the URL in frameIt(\"URL\").\n",
+    "//Example usage:\n",
+    "// displayHTML(frameIt(\"https://en.wikipedia.org/wiki/Latent_Dirichlet_allocation#Topics_in_LDA\",250))\n",
+    "def frameIt( u:String, h:Int ) : String = {\n",
+    "      \"\"\"<iframe \n",
+    " src=\"\"\"\"+ u+\"\"\"\"\n",
+    " width=\"95%\" height=\"\"\"\" + h + \"\"\"\"\n",
+    " sandbox>\n",
+    "  <p>\n",
+    "    <a href=\"http://spark.apache.org/docs/latest/index.html\">\n",
+    "      Fallback link for browsers that, unlikely, don't support frames\n",
+    "    </a>\n",
+    "  </p>\n",
+    "</iframe>\"\"\"\n",
+    "   }\n",
+    "displayHTML(frameIt(\"https://en.wikipedia.org/wiki/Peaking_power_plant\",300))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "displayHTML(frameIt(\"https://archive.ics.uci.edu/ml/datasets/Combined+Cycle+Power+Plant\",500))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sc.version.replace(\".\", \"\").toInt"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     res0: Int = 300"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -101,8 +141,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
     "  \n",
     "\n",
     "Step 1: Business Understanding\n",
@@ -143,10 +181,6 @@
    "source": [
     "  \n",
     "\n",
-    "[TABLE]\n",
-    "\n",
-    "  \n",
-    "\n",
     "Now let us load the data from the Tab-separated-variable or tsv text\n",
     "file into an `RDD[String]` using the familiar `textFile` method."
    ]
@@ -163,11 +197,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     powerPlantRDD: org.apache.spark.rdd.RDD[String] = /databricks-datasets/power-plant/data/Sheet1.tsv MapPartitionsRDD[546] at textFile at command-1267216879634554:1"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -181,15 +211,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     AT\tV\tAP\tRH\tPE\n",
-    ">     14.96\t41.76\t1024.07\t73.17\t463.26\n",
-    ">     25.18\t62.96\t1020.04\t59.08\t444.37\n",
-    ">     5.11\t39.4\t1012.16\t92.14\t488.56\n",
-    ">     20.86\t57.32\t1010.24\t76.64\t446.48"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -224,11 +246,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     powerPlantDF: org.apache.spark.sql.DataFrame = [AT: double, V: double ... 3 more fields]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -242,16 +260,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     root\n",
-    ">      |-- AT: double (nullable = true)\n",
-    ">      |-- V: double (nullable = true)\n",
-    ">      |-- AP: double (nullable = true)\n",
-    ">      |-- RH: double (nullable = true)\n",
-    ">      |-- PE: double (nullable = true)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -266,10 +275,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     res8: Long = 9568\n",
-    "\n",
     "  \n",
     "\n",
     "### 2.1. Alternatively, load data via the upload GUI feature in databricks\n",
@@ -354,24 +359,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     +-----+-----+-------+-----+------+\n",
-    ">     |   AT|    V|     AP|   RH|    PE|\n",
-    ">     +-----+-----+-------+-----+------+\n",
-    ">     |14.96|41.76|1024.07|73.17|463.26|\n",
-    ">     |25.18|62.96|1020.04|59.08|444.37|\n",
-    ">     | 5.11| 39.4|1012.16|92.14|488.56|\n",
-    ">     |20.86|57.32|1010.24|76.64|446.48|\n",
-    ">     |10.82| 37.5|1009.23|96.62| 473.9|\n",
-    ">     |26.27|59.44|1012.23|58.77|443.67|\n",
-    ">     |15.89|43.96|1014.02|75.24|467.35|\n",
-    ">     | 9.48|44.71|1019.12|66.43|478.42|\n",
-    ">     |14.64| 45.0|1021.78|41.25|475.98|\n",
-    ">     |11.74|43.56|1015.14|70.72| 477.5|\n",
-    ">     +-----+-----+-------+-----+------+\n",
-    ">     only showing top 10 rows\n",
-    "\n",
-    "  \n",
-    "\n",
     "#### Viewing as DataFrame\n",
     "\n",
     "This is almost necessary for a data scientist to gain visual insights\n",
@@ -391,13 +378,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    "[TABLE]\n",
-    "\n",
-    "Truncated to 30 rows"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -412,10 +393,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     res11: Long = 9568\n",
-    "\n",
     "  \n",
     "\n",
     "#### Viewing as Table via SQL\n",
@@ -438,17 +415,6 @@
    "source": [
     "  \n",
     "\n",
-    ">     +--------+--------------------+-----------+\n",
-    ">     |database|           tableName|isTemporary|\n",
-    ">     +--------+--------------------+-----------+\n",
-    ">     | default|    sentimentlex_csv|      false|\n",
-    ">     | default|        simple_range|      false|\n",
-    ">     | default|  social_media_usage|      false|\n",
-    ">     | default|social_media_usag...|      false|\n",
-    ">     +--------+--------------------+-----------+\n",
-    "\n",
-    "  \n",
-    "\n",
     "We can also access the list of tables and databases using\n",
     "`spark.catalog` methods as explained here:\n",
     "\n",
@@ -467,18 +433,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    ">     +------------------------------------------------------------+--------+-----------+---------+-----------+\n",
-    ">     |name                                                        |database|description|tableType|isTemporary|\n",
-    ">     +------------------------------------------------------------+--------+-----------+---------+-----------+\n",
-    ">     |sentimentlex_csv                                            |default |null       |EXTERNAL |false      |\n",
-    ">     |simple_range                                                |default |null       |MANAGED  |false      |\n",
-    ">     |social_media_usage                                          |default |null       |MANAGED  |false      |\n",
-    ">     |social_media_usage_table_partitionedbyplatformbucketedbydate|default |null       |MANAGED  |false      |\n",
-    ">     +------------------------------------------------------------+--------+-----------+---------+-----------+"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -493,14 +448,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     +-------+---------------------+-------------------------+\n",
-    ">     |name   |description          |locationUri              |\n",
-    ">     +-------+---------------------+-------------------------+\n",
-    ">     |default|Default Hive database|dbfs:/user/hive/warehouse|\n",
-    ">     +-------+---------------------+-------------------------+\n",
-    "\n",
     "  \n",
     "\n",
     "We need to create a temporary view of the DataFrame as a table before\n",
@@ -534,18 +481,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    ">     +--------+--------------------+-----------+\n",
-    ">     |database|           tableName|isTemporary|\n",
-    ">     +--------+--------------------+-----------+\n",
-    ">     | default|    sentimentlex_csv|      false|\n",
-    ">     | default|        simple_range|      false|\n",
-    ">     | default|  social_media_usage|      false|\n",
-    ">     | default|social_media_usag...|      false|\n",
-    ">     |        |   power_plant_table|       true|\n",
-    ">     +--------+--------------------+-----------+\n",
-    "\n",
     "  \n",
     "\n",
     "Note that table names are in lower-case only!\n",
@@ -582,8 +517,6 @@
    "source": [
     "  \n",
     "\n",
-    "  \n",
-    "\n",
     "The following SQL statement simply selects all the columns (due to `*`)\n",
     "from `powerPlantTable`."
    ]
@@ -602,12 +535,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    "[TABLE]\n",
-    "\n",
-    "Truncated to 30 rows\n",
-    "\n",
     "  \n",
     "\n",
     "Note that the output of the above command is the same as\n",
@@ -630,10 +557,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    "[TABLE]\n",
-    "\n",
     "  \n",
     "\n",
     "**Schema Definition**\n",
@@ -676,10 +599,6 @@
    "source": [
     "  \n",
     "\n",
-    "[TABLE]\n",
-    "\n",
-    "  \n",
-    "\n",
     "Step 4: Visualize Your Data\n",
     "---------------------------\n",
     "\n",
@@ -708,12 +627,6 @@
    "source": [
     "  \n",
     "\n",
-    "[TABLE]\n",
-    "\n",
-    "Truncated to 30 rows\n",
-    "\n",
-    "  \n",
-    "\n",
     "From the above plot, it looks like there is strong linear correlation\n",
     "between temperature and Power Output!"
    ]
@@ -733,12 +646,6 @@
    "source": [
     "  \n",
     "\n",
-    "[TABLE]\n",
-    "\n",
-    "Truncated to 30 rows\n",
-    "\n",
-    "  \n",
-    "\n",
     "The linear correlation is not as strong between Exhaust Vacuum Speed and\n",
     "Power Output but there is some semblance of a pattern."
    ]
@@ -755,13 +662,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "  \n",
-    "\n",
-    "[TABLE]\n",
-    "\n",
-    "Truncated to 30 rows"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -776,12 +677,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    "[TABLE]\n",
-    "\n",
-    "Truncated to 30 rows\n",
-    "\n",
     "  \n",
     "\n",
     "...and atmospheric pressure and relative humidity seem to have little to\n",
@@ -814,12 +709,6 @@
    "source": [
     "  \n",
     "\n",
-    "[TABLE]\n",
-    "\n",
-    "Truncated to 30 rows\n",
-    "\n",
-    "  \n",
-    "\n",
     "Furthermore, you can interactively start playing with `display` on the\n",
     "full DataFrame!"
    ]
@@ -837,12 +726,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  \n",
-    "\n",
-    "[TABLE]\n",
-    "\n",
-    "Truncated to 30 rows\n",
-    "\n",
     "  \n",
     "\n",
     "We will do the following steps in the sequel.\n",
